--- a/src/components/play-detail/PlayDetailTop.scss
+++ b/src/components/play-detail/PlayDetailTop.scss
@@ -89,8 +89,8 @@
           border-radius: 8px;
 
           img {
-            width: 230px;
-            height: 290px;
+            width: 200px;
+            height: 200px;
           }
 
           .end-show-text {
@@ -101,6 +101,7 @@
             font-weight: bold;
             color: #ffffff;
             font-size: 50px;
+            line-height: 1.3;
           }
         }
 
@@ -108,7 +109,6 @@
           width: 290px;
           height: 390px;
           border-radius: 8px;
-          object-fit: cover;
         }
       }
     }
