--- a/src/components/play-list/PlayBox.scss
+++ b/src/components/play-list/PlayBox.scss
@@ -67,16 +67,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 240px;
-    height: 320px;
+    width: 248px;
+    height: 330px;
     position: absolute;
     background-color: rgb(0, 0, 0, 0.5);
     font-family: "Noto Sans KR";
     border-radius: 8px;
 
     img {
-      width: 200px;
-      height: 200px;
+      width: 170px;
+      height: 170px;
     }
 
     .end-show-text {
@@ -86,7 +86,8 @@
       justify-content: center;
       font-weight: bold;
       color: #ffffff;
-      font-size: 45px;
+      font-size: 42px;
+      line-height: 1.3;
     }
   }
 }
