--- a/src/components/main/MainReview.scss
+++ b/src/components/main/MainReview.scss
@@ -32,7 +32,7 @@
   }
   img {
     width: 220px;
-    max-height: 220px;
+    height: 220px;
     object-fit: cover;
     border-radius: 16px;
     border: 1px solid rgb(135, 135, 135);
